# Final_edu

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEBUG.md  README.md  STATUS.md  jiye_app_patch.py  jiye_app_tmp.txt  jiye_base.html  jiye_jiye.html  jiye_review.html  jiye_solution.html  latest_branches.txt  origin_jiye_files.txt  origin_review_files.txt  origin_solution_files.txt  pyproject.toml  render.yaml  restored_base.html.tmp  test_demo_utf8.html  test_demo_v2.html  yeon_analysis.py  yeon_base.html  yeon_copy_files.txt  yeon_utils.py
.agent/: AGENTS.md  Components.md  DEBUG.md  DESIGN.md  STATUS.md
.codex/skills/final-edu-design/: SKILL.md
.codex/skills/final-edu-design/agents/: openai.yaml
.codex/skills/final-edu-design/references/: artifacts.md  review-rubric.md  workflow.md
.codex/skills/final-edu-design/scripts/: capture_pages.py
final_edu/: __init__.py  __main__.py  analysis.py  app.py  cli.py  config.py  courses.py  demo_seed.py  extractors.py  jiye_utils_tmp.py  jobs.py  models.py  solution_content.py  storage.py  utils.py  worker.py  youtube.py  youtube_cache.py
final_edu/static/: app.js  styles.css
final_edu/templates/: base.html  demo.html  index.html  jiye.html  job.html  review.html  solution.html  solutions.html
tests/: test_course_preview.py  test_course_repository.py  test_page1_restore.py  test_page2_dashboard.py  test_render_runtime.py  test_utils.py  test_voc_analysis.py  test_youtube_cache.py  test_youtube_inputs.py
