[project]
name = "final-edu"
version = "0.1.0"
description = "KIT 바이브코딩 공모전 협업용 초기 프로젝트"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "final_edu"
module-root = ""
